<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    android:orientation="vertical"
    tools:context=".MainActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login"
                android:layout_width="200dp"
                android:layout_height="115dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="50dp"

                android:contentDescription="@string/logo_desc"
                app:srcCompat="@drawable/inventory_logo" />

            <EditText
                android:id="@+id/emailSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="emailAddress"
                android:background="#59D9D9D9"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="20dp"
                android:hint="@string/emailCaption"
                android:inputType="textEmailAddress"

                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailSignIn"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="password"
                android:background="#59D9D9D9"
                android:drawableStart="@drawable/ic_forum_black_24dp"
                android:drawablePadding="20dp"
                android:hint="@string/role"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/role"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="password"
                android:background="#59D9D9D9"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="password"
                android:background="#59D9D9D9"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="20dp"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF" />

            <Button
                android:id="@+id/Login"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/defaultColors"
                android:text="@string/createAccount" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/haveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Login"
                android:text="@string/AlreadyHaveAccount"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-30dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/loginPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/haveAccount"
                android:text="@string/login"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="#73308A"
                android:textStyle="bold"/>


        </RelativeLayout>


</ScrollView>